test: Alterando testes em EmpresaServiceTest e criando Classe EmpressaControllerTest